# CNNClassifier

./: .gitignore  README.md  init_setup.sh  notes.txt  pyproject.toml  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-07-18-00-29-00/train/: events.out.tfevents.1689620343.Rahuls-MacBook-Air.local.33822.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-07-18-14-40-41/train/: events.out.tfevents.1689671442.Rahuls-MacBook-Air.local.19113.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-07-18-14-40-41/validation/: events.out.tfevents.1689671833.Rahuls-MacBook-Air.local.19113.1.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-07-18-14-49-26/train/: events.out.tfevents.1689671968.Rahuls-MacBook-Air.local.19632.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-07-18-14-49-26/validation/: events.out.tfevents.1689672342.Rahuls-MacBook-Air.local.19632.1.v2
research/: st_01.ipynb  trials.ipynb
src/deepClassifier/components/: data_ingestion.py  evaluation.py  prepare_callback.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: config_entity.py
src/deepClassifier/pipeline/: stage_04_evaluation.py
src/deepClassifier/utils/: __init__.py  common.py
