#Metadata of your projects This will appear on the python package details on the webesite


[metadata]
license = MIT
license_files = LICENSE
classifier =                    # On which programming language it will work
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]     # fixed installaions package dependences any third party package dependenceies
install_requires =
    ensure==1.0.2
python_requires = >=3.7   

# bare miniumm python version

[options.extras_require] # for testing of application what are the packages is required
testing =
    pytest>=7.1.3 # Unit test and integration test
    mypy>=0.971  # typing error
    flake8>=5.0.4 # any mistakes like extra space 
    tox>=3.25.1  # different working environments to test my application locally
    black>=22.8.0  # standard python package structure is being followed to test

[options.package_data] # where is my 
deepClassifier = py.typed # ignore any error in the importing of package like tensorflow(other packages) testing error
  
[flake8]
max-line-length = 160
exclude = __init__.py # this files will be excluded for checking as this could be empty